# hyprjump

./: Cargo.toml  README.md  flake.nix  readme.md
src/: main.rs
